# pandora

./: .clangd  .gitignore  CMakeLists.txt  default.nix  flake.nix  result
cmake/: FindMyLib.cmake
include/mylib/: mylib.h
src/: CMakeLists.txt  mylib.cpp  test_lib.cpp
tests/: CMakeLists.txt  test_add.cpp  test_mylib.cpp
